# BrokRPC

./: README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml  pull-request.yaml  push.yaml
examples/: simple.py  simple_rpc.py
examples/fibos/: client.py  server.py
examples/fibos/proto/: fibo.proto  fibo_pb2.py  fibo_pb2.pyi  fibo_pb2_protomq.py
proto/brokrpc/spec/v1/: amqp.proto  call.proto  consumer.proto
src/brokrpc/: abc.py  broker.py  builder.py  cli.py  consumer.py  debug.py  entrypoint.py  errors.py  message.py  middleware.py  model.py  options.py  plugin.py  publisher.py  queue.py  retry.py
src/brokrpc/driver/: aiormq.py  memory.py  redis.py
src/brokrpc/rpc/: abc.py  caller.py  client.py  handler.py  model.py  server.py  storage.py
src/brokrpc/rpc/protobuf/: caller.py  client_old.py  consumer.py  exception.py  server_old.py  sync_to_async.py
src/brokrpc/serializer/: ident.py  json.py  protobuf.py  pydantic.py  raw.py
src/brokrpc/spec/v1/: amqp_pb2.py  amqp_pb2.pyi  call_pb2.py  call_pb2.pyi  consumer_pb2.py  consumer_pb2.pyi
src/protomq/: abc.py  broker.py  builder.py  caller.py  client.py  connection.py  consumer.py  debug.py  exception.py  handler.py  message.py  middleware.py  model.py  options.py  publisher.py  serializer.py  server.py  storage.py  stringify.py  sync_to_async.py
src/protomq/driver/: aiormq.py  connect.py
src/protomq/protobuf/: serializer.py
src/protomq/rpc/: abc.py  caller.py  client.py  handler.py  model.py  server.py  storage.py
src/protomq/serializer/: ident.py  json.py  protobuf.py  raw.py
tests/: buf.gen.yaml  buf.yaml  check.py  conftest.py  test_mypy.yml
tests/integration/: conftest.py  test_cli.py  test_rpc.py  test_serializer.py  test_simple.py
tests/integration/rpc/: conftest.py  test_rpc.py
tests/stub/: driver.py  greeting.py  greetings.proto  greetings_pb2.py  greetings_pb2.pyi  pydantic.py  queue.py  simple.py  stream.py
tests/stub/plugin/: abc.py  impl.py
tests/stub/proto/: greeting.proto  greeting_pb2.py  greeting_pb2.pyi
tests/unit/: test_broker.py  test_cli.py  test_plugin.py  test_retry.py
tests/unit/brokrpc/: test_broker.py
tests/unit/protomq/: test_broker.py
tests/unit/rpc/: test_client.py  test_server.py
tests/unit/serializer/: test_ident.py  test_json.py  test_protobuf.py  test_pydantic.py
