[tool.poetry]
name = "BrokRPC"
version = "0.1.0"
description = "framework for gRPC like server-client communication over message brokers"
authors = ["zerlok <danil.troshnev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = {version = "^5.26.1", optional = true}
googleapis-common-protos = {version = "^1.65.0", optional = true}
aiormq = {version = "^6.8.1", optional = true}
aiofiles = {version = "^24.1.0", optional = true}

[tool.poetry.extras]
cli = ["aiofiles"]
protobuf = ["protobuf", "googleapis-common-protos"]
aiormq = ["aiormq"]

[tool.poetry.group.dev.dependencies]
types-protobuf = "^5.26.0.20240422"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
pytest-asyncio = "^0.24.0"
pyprotostuben = "^0.1.2"
pytest-timeout = "^2.3.1"
pytest-mypy-plugins = "^3.1.2"
types-aiofiles = "^24.1.0.20240626"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
exclude = ["**_pb2.py", "**_pb2.pyi", "**_pb2_grpc.py", "**_pb2_grpc.pyi"]
line-length = 120
output-format = "pylint"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # because we use mypy
    "D", # TODO: add docstrings to public code
    "FA", # TODO: consider should we use __annotations__
    "TD", # no task tracking
    "FIX", # TODO: consider enable it against new code on pull requests
    "COM812", # because ruff format suggests to skip it
    "ISC001", # because ruff format suggests to skip it
    "RET505", # clashes with mypy exhaustiveness check
    "S101", # allow asserts for tests checks and mypy help
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001", # it's ok to use a fixture with a side effect in a test.
    "PT004", # fixture may add side effect and doesn't return anything.
]


[tool.mypy]
files = ["src", "tests", "examples/simple.py", "examples/simple_rpc.py"]
strict = true

[[tool.mypy.overrides]]
module = ["google.rpc.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
addopts = [
    "--timeout=60", # 1 minute for each test
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "if __name__ == .__main__.:",
    "if t.TYPE_CHECKING:"
]
show_missing = true
